# diverge

./: .committed.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MEMORY.md  README.md
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/agents/: researcher.md  verifier.md
.claude/commands/: audit.md  repro.md
.claude/rules/: code-style.md  security.md  testing.md
docs/: portage-test-inventory.md  testing-spec.md
src/: atom.rs  cli.rs  color.rs  config.rs  dbapi.rs  dep.rs  depgraph.rs  gpkg.rs  lib.rs  main.rs  manifest.rs  matching.rs  news.rs  profile.rs  repository.rs  resolver.rs  session.rs  sets.rs  sync.rs  update.rs  util.rs  vardb.rs  version.rs  xpak.rs
src/executor/: config_protect.rs  ebuild_sh.rs  fetch.rs  merge.rs  mod.rs  phase.rs  scheduler.rs  spawn.rs  (+1 more)
tests/: adapters_extra.rs  atom_depgraph_cover.rs  atom_edge_cover.rs  bin_cover.rs  binpkg_vardb_cover.rs  branch_cover.rs  cli_adapters_cover.rs  closing_cover.rs  config_extra.rs  config_layer_cover.rs  coverage_finish.rs  dbapi_extra.rs  dep_deep_cover.rs  dep_matching_cover.rs  depgraph_cover.rs  depgraph_deep_cover.rs  depgraph_final_cover.rs  dnf_subset_cover.rs  dnf_subset_precise.rs  domain_cover.rs  edge_cover.rs  emerge_extra.rs  executor_cover.rs  exhaustive_cover.rs  fetch_spawn_cover.rs  final_cover.rs  interop_differential.rs  io_failure_cover.rs  last_arms_cover.rs  last_mile_cover.rs  lib_run_cover.rs  manifest_extra.rs  matching_extra.rs  portage.rs  precise_cover.rs  reachable_finish_cover.rs  residual_cover.rs  resolver_batch1.rs  resolver_batch2.rs  resolver_batch3.rs  (+10 more)
(+36 files in other folders)
