[package]
name = "diverge"
version = "0.1.0"
edition = "2024"
description = "A from-scratch Rust rewrite of Gentoo Portage's emerge package manager."
license = "GPL-2.0-only"
repository = "https://github.com/coleleavitt/diverge"
readme = "README.md"

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
blake2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
